--- a/docs/3.0rc/develop/write-flows.mdx
+++ b/docs/3.0rc/develop/write-flows.mdx
@@ -3,13 +3,12 @@ title: Write and run flows
 description: Learn the basics of defining and running flows.
 ---
 
-Flows are the most central Prefect object. 
+Flows are the most central Prefect objects. 
 A flow is a container for workflow logic as code. 
-
 Flows are defined as Python functions. 
 They can take inputs, perform work, and return an output.
 
-You can turn any function into a Prefect flow by adding the `@flow` decorator to it:
+Turn any function into a Prefect flow by adding the `@flow` decorator to it:
 
 ```python
 from prefect import flow
@@ -20,19 +19,18 @@ def my_flow():
     return
 ```
 
-When a function becomes a flow, its behavior changes, giving it the following capabilities:
+When a function becomes a flow, its behavior changes. Flows have the following capabilities:
 
 - All runs of the flow have persistent [state](/3.0rc/develop/manage-states/). Transitions between states are recorded, 
 allowing you to observe and act on flow execution.
 - Input arguments can be type validated as workflow parameters.
-- Retries can be performed on failure.
+- [Retries](/#retries) can be performed on failure.
 - Timeouts can be enforced to prevent unintentional, long-running workflows.
 - Metadata about [flow runs](#flow-runs), such as run time and final state, is automatically tracked.
 - A flow can be [deployed](/3.0rc/deploy/infrastructure-examples/docker/), which exposes an API for interacting with it remotely.
 
 Flows are uniquely identified by name. 
 You can provide a `name` parameter value for the flow:
-
 
 ```python
 @flow(name="My Flow")
@@ -99,21 +97,17 @@ Forks 🍴 : 1245
 12:47:45.008 | INFO | Flow run 'ludicrous-warthog' - Finished in state Completed()
 ```
 
-<Tip>
-**Flows can contain arbitrary Python code**
+As you can see above, fows can contain arbitrary Python code. 
 
-As shown above, flow definitions can contain arbitrary Python code.
-</Tip>
-
-## Specifying parameters
+## Specify flow parameters
 
 As with any Python function, you can pass arguments to a flow, including both positional and keyword arguments.
 These arguments defined on your flow function are called [parameters](/3.0rc/develop/write-flows/#parameters).
 They are stored by the Prefect orchestration engine on the flow run object.
 
 Prefect automatically performs type conversion of inputs using any provided type hints.
-Type hints provide an easy way to enforce typing on your flow parameters and can be customized with [Pydantic](https://pydantic-docs.helpmanual.io/).
-Prefect supports _any_ Pydantic model as a type hint for a flow parameter.
+Type hints provide a simple way to enforce typing on your flow parameters and can be customized with [Pydantic](https://pydantic-docs.helpmanual.io/).
+Prefect supports any Pydantic model as a type hint for a flow parameter.
 
 ```python
 from prefect import flow
@@ -124,6 +118,7 @@ class Model(BaseModel):
     a: int
     b: float
     c: str
+
 
 @flow
 def model_validator(model: Model):
@@ -136,11 +131,13 @@ For example, to automatically convert an arguement to a datetime:
 from prefect import flow
 from datetime import datetime
 
+
 @flow
 def what_day_is_it(date: Optional[datetime] = None):
     if date is None:
         date = datetime.now(timezone.utc)
     print(f"It was {date.strftime('%A')} on {date.isoformat()}")
+
 
 if __name__ == "__main__":
     what_day_is_it("2021-01-01T02:00:19.180906")
@@ -170,7 +167,7 @@ If a flow run for a deployment receives invalid parameters, it moves from a `Pen
 Flow run parameters cannot exceed `512kb` in size.
 </Note>
 
-## Composing flows
+## Compose flows
 
 Flows can call [tasks](/3.0rc/develop/write-tasks), the most granular units of orchestrated work in Prefect workflows:
 
@@ -181,6 +178,7 @@ from prefect import flow, task
 @task
 def print_hello(name):
     print(f"Hello {name}!")
+
 
 @flow(name="Hello Flow")
 def hello_world(name="world"):
@@ -196,12 +194,11 @@ You may call any number of tasks, other flows, and even regular Python functions
 You can pass parameters to your flow function to use elsewhere in the workflow, and Prefect will report on the progress 
 and [final state](#final-state-determination) of any invocation.
 
-We recommend writing atomic tasks.
 Each task should be a single, discrete piece of work in your workflow, such as calling an API, performing a database operation, or transforming a data point.
-The more granular you make your tasks, the better your workflows can recover from failures and the easier you can find and fix issues.
+The more granular the tasks, the better your workflows can recover from failures and the easier you can find and fix issues.
 Prefect tasks are well suited for parallel or distributed execution using distributed computation frameworks such as Dask or Ray. 
 
-### Nesting flows
+### Nestflows
 
 In addition to calling tasks within a flow, you can also call other flows.
 A _nested_ flow run is created when a flow function is called by another flow.
@@ -242,16 +239,16 @@ You can also define flows or tasks in separate modules and import them for use:
 from prefect import flow, task
 
 
-@flow(name="Subflow")
-def my_subflow(msg):
-    print(f"Subflow says: {msg}")
+@flow(name="Nestedflow")
+def my_nested_flow(msg):
+    print(f"Nestedflow says: {msg}")
 ```
 
-Here's a parent flow that imports and uses `my_subflow()` as a subflow:
+Here's a parent flow that imports and uses `my_nested_flow` as a nested flow:
 
 ```python
 from prefect import flow, task
-from subflow import my_subflow
+from nested_flow import my_nested_flow
 
 
 @task(name="Print Hello")
@@ -260,10 +257,12 @@ def print_hello(name):
     print(msg)
     return msg
 
+
 @flow(name="Hello Flow")
 def hello_world(name="world"):
     message = print_hello(name)
-    my_subflow(message)
+    my_nested_flow(message)
+
 
 if __name__=="__main__":
     hello_world("Marvin")
@@ -277,8 +276,8 @@ $ python hello.py
 15:19:21.945 | INFO    | Flow run 'daft-cougar' - Created task run 'Print Hello-84f0fe0e-0' for task 'Print Hello'
 Hello Marvin!
 15:19:22.055 | INFO    | Task run 'Print Hello-84f0fe0e-0' - Finished in state Completed()
-15:19:22.107 | INFO    | Flow run 'daft-cougar' - Created subflow run 'ninja-duck' for flow 'Subflow'
-Subflow says: Hello Marvin!
+15:19:22.107 | INFO    | Flow run 'daft-cougar' - Created subflow run 'ninja-duck' for flow 'Nestedfflow'
+Nestedflow says: Hello Marvin!
 15:19:22.794 | INFO    | Flow run 'ninja-duck' - Finished in state Completed()
 15:19:23.215 | INFO    | Flow run 'daft-cougar' - Finished in state Completed('All states completed.')
 ```
@@ -311,11 +310,14 @@ The simplest Prefect flow is a synchronous Python function. Here's an example of
 ```python
 from prefect import flow
 
+
 @flow
 def print_message():
     print("Hello, I'm a flow")
 
-print_message()
+
+if __name__ == "__main__":
+    print_message()
 ```
 
 ### Asynchronous functions
@@ -325,14 +327,15 @@ The resulting flows are coroutines that can be awaited or run concurrently, foll
 
 ```python
 import asyncio
-
 from prefect import task, flow
+
 
 @task
 async def print_values(values):
     for value in values:
         await asyncio.sleep(1)
         print(value, end=" ")
+
 
 @flow
 async def async_flow():
@@ -345,7 +348,9 @@ async def async_flow():
     coros = [print_values("abcd"), print_values("6789")]
     await asyncio.gather(*coros)
 
-asyncio.run(async_flow())
+
+if __name__ == "__main__":
+    asyncio.run(async_flow())
 ```
 
 ### Class methods
@@ -363,15 +368,18 @@ class MyClass:
     def my_instance_method(self):
         pass
 
+
     @classmethod
     @flow
     def my_class_method(cls):
         pass
 
+
     @staticmethod
     @flow
     def my_static_method():
         pass
+
 
 MyClass().my_instance_method()
 MyClass.my_class_method()
@@ -398,6 +406,7 @@ def generator():
 def consumer(x):
     print(x)
 
+
 for val in generator():
     consumer(val)
 ```
@@ -414,14 +423,17 @@ Here is an example of proactive generator consumption:
 ```python
 from prefect import flow
 
+
 def gen():
     yield from [1, 2, 3]
     print('Generator consumed!')
 
+
 @flow
 def f():
     return gen()
-    
+
+
 f()  # prints 'Generator consumed!'
 ```
 
@@ -431,17 +443,19 @@ Values yielded from generator flows are not considered final results and do not 
 ```python
 from prefect import flow
 
+
 def gen():
     yield from [1, 2, 3]
     print('Generator consumed!')
 
+
 @flow
 def f():
     yield gen
-    
+
+
 generator = next(f())
 list(generator) # prints 'Generator consumed!'
-
 ```
 </Warning>
 
@@ -459,10 +473,12 @@ Prefect supports _any_ Pydantic model as a type hint within a flow is coerced au
 from prefect import flow
 from pydantic import BaseModel
 
+
 class Model(BaseModel):
     a: int
     b: float
     c: str
+
 
 @flow
 def model_validator(model: Model):
@@ -475,11 +491,13 @@ For example, to automatically convert something to a datetime:
 from prefect import flow
 from datetime import datetime
 
+
 @flow
 def what_day_is_it(date: Optional[datetime] = None):
     if date is None:
         date = datetime.now(timezone.utc)
     print(f"It was {date.strftime('%A')} on {date.isoformat()}")
+
 
 if __name__ == "__main__":
     what_day_is_it("2021-01-01T02:00:19.180906")
@@ -541,12 +559,13 @@ Unexpected errors may occur. For example the GitHub API may be temporarily unava
 Check out [Transactions](/3.0rc/develop/transactions) to learn how to make your flows more resilient.
 </Tip>
 
-## Writing flows
+## Write flows
 
 The `@flow` decorator is used to designate a flow:
 
 ```python
 from prefect import flow
+
 
 @flow
 def my_flow():
@@ -569,9 +588,11 @@ Flows can call tasks to allow Prefect to orchestrate and track more granular uni
 ```python
 from prefect import flow, task
 
+
 @task
 def print_hello(name):
     print(f"Hello {name}!")
+
 
 @flow(name="Hello Flow")
 def hello_world(name="world"):
@@ -590,7 +611,7 @@ In addition, if you put all of your workflow logic in a single flow function and
 and must be retried from the beginning. 
 You can avoid this by breaking up the code into multiple tasks.
 
-You may call any number of other tasks, subflows, and even regular Python functions within your flow. 
+You may call any number of other tasks, nested flows, and even regular Python functions within your flow. 
 You can pass parameters to your flow function to use elsewhere in the workflow, and Prefect will report on the progress 
 and [final state](#final-state-determination) of any invocation.
 
@@ -598,13 +619,12 @@ Prefect encourages "small tasks." Each one should represent a single logical ste
 This allows Prefect to better contain task failures.
 </Tip>
 
-## Subflows
+## Nested flows
 
 In addition to calling tasks within a flow, you can also call other flows.
-Child flows are called [subflows](/3.0rc/develop/write-flows/#composing-flows) and allow you to efficiently manage, 
-track, and version common multi-task logic.
+[Nested flows](/3.0rc/develop/write-flows/#composing-flows) allow you to efficiently manage, track, and version common multi-task logic.
 
-Subflows are a great way to organize your workflows and offer more visibility within the UI.
+Nested flows are a great way to organize your workflows and offer more visibility within the UI.
 
 Add a `flow` decorator to the `get_open_issues` function:
 
@@ -623,8 +643,8 @@ def get_open_issues(repo_name: str, open_issues_count: int, per_page: int = 100)
     return [i for p in issues for i in p.result()]
 ```
 
-Whenever you run the parent flow, the subflow is called and runs. 
-In the UI, each subflow run is linked to its parent and can be individually inspected.
+Whenever you run the parent flow, the nested flow is called and runs. 
+In the UI, each nested flow run is linked to its parent and can be individually inspected.
 
 ## Flow settings
 
@@ -642,67 +662,61 @@ Flows can be configured by passing arguments to the decorator. Flows accept the 
 | `validate_parameters`                              | Boolean indicating whether parameters passed to flows are validated by Pydantic. Default is `True`.                                                                                                                  |
 | `version`                                          | An optional version string for the flow. If not provided, we will attempt to create a version string as a hash of the file containing the wrapped function. If the file cannot be located, the version will be null. |
 
-For example, you can provide a `name` value for the flow. Here is the optional `description` argument 
-and a non-default task runner.
+For example, you can provide `name` and `description` arguments.
 
 ```python
 from prefect import flow
 
+
 @flow(
-    name="My Flow",
-    description="My flow with retries and linear backoff",
-    retries=3,
-    retry_delay_seconds=[10, 20, 30],
-)
+    name="My Flow", description="My flow with a name and description", log_prints=True)
 def my_flow():
-    return
+    print("Hello, I'm a flow")
+
+
+if __name__ == "__main__":
+    my_flow()
 ```
 
-You can also provide the description as the docstring on the flow function.
+If no description is provided, a flow function's docstring becomes the description.
 
-```python
-@flow(
-    name="My Flow",
-    retries=3,
-    retry_delay_seconds=[10, 20, 30],
-)
-def my_flow():
-    """My flow with retries and linear backoff"""
-    return
-```
-
-You can distinguish runs of this flow by providing a `flow_run_name`.
-This setting accepts a string that can optionally contain templated references to the parameters of your flow.
+You can distinguish runs of a flow by pasisng a `flow_run_name`.
+This parameter accepts a string that can optionally contain templated references to the parameters of your flow.
 The name is formatted using Python's standard string formatting syntax:
 
 ```python
 import datetime
 from prefect import flow
 
+
 @flow(flow_run_name="{name}-on-{date:%A}")
 def my_flow(name: str, date: datetime.datetime):
     pass
 
+
 # creates a flow run called 'marvin-on-Thursday'
-my_flow(name="marvin", date=datetime.datetime.now(datetime.timezone.utc))
+if __name__ == "__main__":
+    my_flow(name="marvin", date=datetime.datetime.now(datetime.timezone.utc))
 ```
 
-Additionally this setting also accepts a function that returns a string for the flow run name:
+This setting also accepts a function that returns a string for the flow run name:
 
 ```python
 import datetime
 from prefect import flow
 
+
 def generate_flow_run_name():
     date = datetime.datetime.now(datetime.timezone.utc)
-
     return f"{date:%A}-is-a-nice-day"
+
 
 @flow(flow_run_name=generate_flow_run_name)
 def my_flow(name: str):
     pass
 
-# creates a flow run called 'Thursday-is-a-nice-day'
+
+# creates a flow run named 'Thursday-is-a-nice-day'
 if __name__ == "__main__":
     my_flow(name="marvin")
 ```
@@ -713,6 +727,7 @@ If you need access to information about the flow, use the `prefect.runtime` modu
 from prefect import flow
 from prefect.runtime import flow_run
 
+
 def generate_flow_run_name():
     flow_name = flow_run.flow_name
 
@@ -722,104 +737,37 @@ def generate_flow_run_name():
 
     return f"{flow_name}-with-{name}-and-{limit}"
 
+
 @flow(flow_run_name=generate_flow_run_name)
 def my_flow(name: str, limit: int = 100):
     pass
 
-# creates a flow run called 'my-flow-with-marvin-and-100'
+
+# creates a flow run named 'my-flow-with-marvin-and-100'
 if __name__ == "__main__":
     my_flow(name="marvin")
 ```
 
-Note that `validate_parameters` check that input values conform to the annotated types on the function.
-Where possible, values are coerced into the correct type. For example, if a parameter is defined as `x: int` and "5" is passed, 
-it resolves to `5`.
+Note that `validate_parameters` checks that input values conform to the annotated types on the function.
+Where possible, values are coerced into the correct type. 
+For example, if a parameter is defined as `x: int` and the string **"5"** is passed, it resolves to `5`.
 If set to `False`, no validation is performed on flow parameters.
 
 ## Final state determination
 
-States are a record of the status of a particular task or flow run. See the [manage states](/3.0rc/develop/manage-states) page for more information.
+A state is a record of the status of a particular task run or flow run. 
+See the [manage states](/3.0rc/develop/manage-states) page for more information.
 
-The final state of the flow is determined by its return value. The following rules apply:
+The final state of the flow is determined by its return value. 
+The following rules apply:
 
 - If an exception is raised directly in the flow function, the flow run is marked as failed.
-- If the flow does not return a value (or returns `None`), its state is determined by the states of all of the tasks and subflows within it.
-  - If _any_ task run or subflow run failed, then the final flow run state is marked as `FAILED`.
-  - If _any_ task run was cancelled, then the final flow run state is marked as `CANCELLED`.
+- If the flow does not return a value (or returns `None`), its state is determined by the states of all of the tasks and nested flows within it.
+  - If _any_ task run or nested flow run fails, then the final flow run state is marked as `FAILED`.
+  - If _any_ task run is cancelled, then the final flow run state is marked as `CANCELLED`.
 - If a flow returns a manually created state, it is used as the state of the final flow run. This allows for manual determination of final state.
 - If the flow run returns _any other object_, then it is marked as completed.
 
-The following examples illustrate each of these cases:
-
-### Raise an exception
-
-If an exception is raised within the flow function, the flow is immediately marked as failed.
-
-```python
-from prefect import flow
-
-@flow
-def always_fails_flow():
-    raise ValueError("This flow immediately fails")
-
-if __name__ == "__main__":
-    always_fails_flow()
-```
-
-Running this flow produces the following result:
-
-```bash
-22:22:36.864 | INFO    | prefect.engine - Created flow run 'acrid-tuatara' for flow 'always-fails-flow'
-22:22:37.060 | ERROR   | Flow run 'acrid-tuatara' - Encountered exception during execution:
-Traceback (most recent call last):...
-ValueError: This flow immediately fails
-```
-
-### Return `none`
-
-A flow with no return statement is determined by the state of all of its task runs.
-
-```python
-from prefect import flow, task
-
-@task
-def always_fails_task():
-    raise ValueError("I fail successfully")
-
-@task
-def always_succeeds_task():
-    print("I'm fail safe!")
-    return "success"
-
-@flow
-def always_fails_flow():
-    always_fails_task.submit().result(raise_on_failure=False)
-    always_succeeds_task()
-
-if __name__ == "__main__":
-    always_fails_flow()
-```
-
-Running this flow produces the following result:
-
-```bash
-18:32:05.345 | INFO    | prefect.engine - Created flow run 'auburn-lionfish' for flow 'always-fails-flow'
-18:32:05.582 | INFO    | Flow run 'auburn-lionfish' - Created task run 'always_fails_task-96e4be14-0' for task 'always_fails_task'
-18:32:05.582 | INFO    | Flow run 'auburn-lionfish' - Submitted task run 'always_fails_task-96e4be14-0' for execution.
-18:32:05.610 | ERROR   | Task run 'always_fails_task-96e4be14-0' - Encountered exception during execution:
-Traceback (most recent call last):
-  ...
-ValueError: I fail successfully
-18:32:05.638 | ERROR   | Task run 'always_fails_task-96e4be14-0' - Finished in state Failed('Task run encountered an exception.')
-18:32:05.658 | INFO    | Flow run 'auburn-lionfish' - Created task run 'always_succeeds_task-9c27db32-0' for task 'always_succeeds_task'
-18:32:05.659 | INFO    | Flow run 'auburn-lionfish' - Executing 'always_succeeds_task-9c27db32-0' immediately...
-I'm fail safe!
-18:32:05.703 | INFO    | Task run 'always_succeeds_task-9c27db32-0' - Finished in state Completed()
-18:32:05.730 | ERROR   | Flow run 'auburn-lionfish' - Finished in state Failed('1/2 states failed.')
-Traceback (most recent call last):
-  ...
-ValueError: I fail successfully
-```
 
 ### Return a future
 
@@ -828,14 +776,17 @@ If a flow returns one or more futures, the final state is determined based on th
 ```python
 from prefect import flow, task
 
+
 @task
 def always_fails_task():
     raise ValueError("I fail successfully")
+
 
 @task
 def always_succeeds_task():
     print("I'm fail safe!")
     return "success"
+
 
 @flow
 def always_succeeds_flow():
@@ -843,11 +794,12 @@ def always_succeeds_flow():
     y = always_succeeds_task.submit(wait_for=[x])
     return y
 
+
 if __name__ == "__main__":
     always_succeeds_flow()
 ```
 
-Running this flow produces the following result&mdash;it succeeds because it returns the future of the task that succeeds:
+Running this flow reulsts in a **Completed** final state because the the flow returns the future of the task that succeeds:
 
 ```bash
 18:35:24.965 | INFO    | prefect.engine - Created flow run 'whispering-guan' for flow 'always-succeeds-flow'
@@ -873,17 +825,21 @@ then determining if any of the states are not `COMPLETED`.
 ```python
 from prefect import task, flow
 
+
 @task
 def always_fails_task():
     raise ValueError("I am bad task")
+
 
 @task
 def always_succeeds_task():
     return "foo"
 
+
 @flow
 def always_succeeds_flow():
     return "bar"
+
 
 @flow
 def always_fails_flow():
@@ -893,48 +849,36 @@ def always_fails_flow():
     return x, y, z
 ```
 
-Running this flow produces the following result.
-It fails because one of the three returned futures failed.
-Note that the final state is `Failed`, but the states of each of the returned futures is included in the flow state:
+Running this flow fails because one of the three returned futures failed. 
+Note that the states of each of the returned futures are included in the flow run state:
 
 ```bash
-20:57:51.547 | INFO    | prefect.engine - Created flow run 'impartial-gorilla' for flow 'always-fails-flow'
-20:57:51.645 | INFO    | Flow run 'impartial-gorilla' - Created task run 'always_fails_task-58ea43a6-0' for task 'always_fails_task'
-20:57:51.686 | INFO    | Flow run 'impartial-gorilla' - Created task run 'always_succeeds_task-c9014725-0' for task 'always_succeeds_task'
-20:57:51.727 | ERROR   | Task run 'always_fails_task-58ea43a6-0' - Encountered exception during execution:
-Traceback (most recent call last):...
-ValueError: I am bad task
-20:57:51.787 | INFO    | Task run 'always_succeeds_task-c9014725-0' - Finished in state Completed()
-20:57:51.808 | INFO    | Flow run 'impartial-gorilla' - Created subflow run 'unbiased-firefly' for flow 'always-succeeds-flow'
-20:57:51.884 | ERROR   | Task run 'always_fails_task-58ea43a6-0' - Finished in state Failed('Task run encountered an exception.')
 20:57:52.438 | INFO    | Flow run 'unbiased-firefly' - Finished in state Completed()
 20:57:52.811 | ERROR   | Flow run 'impartial-gorilla' - Finished in state Failed('1/3 states failed.')
 Failed(message='1/3 states failed.', type=FAILED, result=(Failed(message='Task run encountered an exception.', type=FAILED, result=ValueError('I am bad task'), task_run_id=5fd4c697-7c4c-440d-8ebc-dd9c5bbf2245), Completed(message=None, type=COMPLETED, result='foo', task_run_id=df9b6256-f8ac-457c-ba69-0638ac9b9367), Completed(message=None, type=COMPLETED, result='bar', task_run_id=cfdbf4f1-dccd-4816-8d0f-128750017d0c)), flow_run_id=6d2ec094-001a-4cb0-a24e-d2051db6318d)
 ```
 
-<Note>
-**Returning multiple states**
-
-When returning multiple states, they must be contained in a `set`, `list`, or `tuple`.
-If using other collection types, the result of the contained states are checked.
-</Note>
+If multiple states are returned, they must be contained in a `set`, `list`, or `tuple`.
 
 ### Return a manual state
 
-If a flow returns a manually created state, the final state is determined based on the return value.
+If a flow returns a manually created state, the final state is determined based upon the return value.
 
 ```python
 from prefect import task, flow
 from prefect.states import Completed, Failed
 
+
 @task
 def always_fails_task():
     raise ValueError("I fail successfully")
+
 
 @task
 def always_succeeds_task():
     print("I'm fail safe!")
     return "success"
+
 
 @flow
 def always_succeeds_flow():
@@ -945,6 +889,7 @@ def always_succeeds_flow():
     else:
         return Failed(message="How did this happen!?")
 
+
 if __name__ == "__main__":
     always_succeeds_flow()
 ```
@@ -952,55 +897,30 @@ if __name__ == "__main__":
 Running this flow produces the following result.
 
 ```bash
-18:37:42.844 | INFO    | prefect.engine - Created flow run 'lavender-elk' for flow 'always-succeeds-flow'
-18:37:43.125 | INFO    | Flow run 'lavender-elk' - Created task run 'always_fails_task-96e4be14-0' for task 'always_fails_task'
-18:37:43.126 | INFO    | Flow run 'lavender-elk' - Submitted task run 'always_fails_task-96e4be14-0' for execution.
-18:37:43.162 | INFO    | Flow run 'lavender-elk' - Created task run 'always_succeeds_task-9c27db32-0' for task 'always_succeeds_task'
-18:37:43.163 | INFO    | Flow run 'lavender-elk' - Submitted task run 'always_succeeds_task-9c27db32-0' for execution.
-18:37:43.175 | ERROR   | Task run 'always_fails_task-96e4be14-0' - Encountered exception during execution:
-Traceback (most recent call last):
-  ...
+...
 ValueError: I fail successfully
+07:29:34.754 | INFO    | Task run 'always_succeeds_task-0' - Created task run 'always_succeeds_task-0' for task 'always_succeeds_task'
+07:29:34.848 | ERROR   | Task run 'always_fails_task-0' - Finished in state Failed('Task run encountered an exception ValueError: I fail successfully')
 I'm fail safe!
-18:37:43.217 | ERROR   | Task run 'always_fails_task-96e4be14-0' - Finished in state Failed('Task run encountered an exception.')
-18:37:43.236 | INFO    | Task run 'always_succeeds_task-9c27db32-0' - Finished in state Completed()
-18:37:43.264 | INFO    | Flow run 'lavender-elk' - Finished in state Completed('I am happy with this result')
+07:29:35.086 | INFO    | Task run 'always_succeeds_task-0' - Finished in state Completed()
+07:29:35.225 | INFO    | Flow run 'hidden-butterfly' - Finished in state Completed('I am happy with this result')
 ```
 
-### Return an object
+If a flow run returns any other object, then it is recorded as Completed.
 
-If the flow run returns _any other object_, then it is marked as completed.
+## Retries
 
-```python
-from prefect import task, flow
+Prefect can automatically retry flow runs on failure. 
 
-@task
-def always_fails_task():
-    raise ValueError("I fail successfully")
+To enable retries, pass `retries` to the flow.
+If the flow run fails, Prefect will retry it up to `retries` times.
+Optionally, pass an integer to `retry_delay_seconds` to specify how many seconds to wait between each retry attempt. 
+If the flow run fails on the final retry, Prefect records the final flow run state as _failed_.
 
-@flow
-def always_succeeds_flow():
-    always_fails_task().submit()
-    return "foo"
-
-if __name__ == "__main__":
-    always_succeeds_flow()
-```
-
-Running this flow produces the following result.
-
-```bash
-21:02:45.715 | INFO    | prefect.engine - Created flow run 'sparkling-pony' for flow 'always-succeeds-flow'
-21:02:45.816 | INFO    | Flow run 'sparkling-pony' - Created task run 'always_fails_task-58ea43a6-0' for task 'always_fails_task'
-21:02:45.853 | ERROR   | Task run 'always_fails_task-58ea43a6-0' - Encountered exception during execution:
-Traceback (most recent call last):...
-ValueError: I am bad task
-21:02:45.879 | ERROR   | Task run 'always_fails_task-58ea43a6-0' - Finished in state Failed('Task run encountered an exception.')
-21:02:46.593 | INFO    | Flow run 'sparkling-pony' - Finished in state Completed()
-Completed(message=None, type=COMPLETED, result='foo', flow_run_id=7240e6f5-f0a8-4e00-9440-a7b33fb51153)
-```
+A new flow run is not created when a flow run is retried. 
+Instead, a new state is added to the state history of the original flow run.
 
 ## See also
 
 - Store and reuse non-sensitive bits of data, such as configuration information, by using [variables](/3.0rc/develop/variables).
-- Supercharge your flow with [tasks](/3.0rc/develop/write-tasks/) to break down the workflow's complexity and make it more performant and observable.
+- Organize a flow with [tasks](/3.0rc/develop/write-tasks/) to break down the workflow's complexity and make it more performant and observable.
